--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Ultimate POS"
+APP_NAME="Pharmacy"
 APP_TITLE=""
 APP_ENV=local
 APP_KEY=base64:W8UqtE9LHZW+gRag78o4BCbN1M0w4HdaIFdLqHJ/9PA=
