remove active package icon from top bar

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_ENV="live"
 APP_KEY=base64:W8UqtE9LHZW+gRag78o4BCbN1M0w4HdaIFdLqHJ/9PA=
 APP_DEBUG="false"
 APP_LOG_LEVEL=debug
-APP_URL="http://localhost/pos/public"
+APP_URL="http://localhost/pharmacy"
 APP_LOCALE="en"
 APP_TIMEZONE="Asia/Dhaka"
 
