not allow register

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ APP_LOCALE="en"
 APP_TIMEZONE="Asia/Dhaka"
 
 ADMINISTRATOR_USERNAMES=admin
-ALLOW_REGISTRATION="true"
+ALLOW_REGISTRATION="false"
 
 LOG_CHANNEL=stack
 
